# aipurview-code

./: .env.dev  .env.prod  .gitignore  AI Implementation Plan.md  CHANGE_HISTORY_IMPLEMENTATION_GUIDE.md  CLAUDE.md  Clean_Architecture.md  LICENSE.md  LICENSING-FAQ.md  MODEL_SECURITY_SCANNING_PLAN.md  README.md  agent-output.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entity-tips-content.md  eu-ai-act-controls-fix-notes.md  eu-ai-act-developer-brief.md  install.sh  iso-27001-developer-brief.md  iso-42001-developer-brief.md  llm-evals-class.html  llm-evals-training-workshop.md  llm-evals-training-workshop.pptx  mlflow_integration.md  package.json  tool_list_.docx  tool_list_.md  version.json  ~$llm-evals-training-workshop.pptx
.husky/: pre-commit
EvalServer/sdk/: README.md  pyproject.toml
EvalServer/sdk/tests/: test_cli.py  test_sdk.py
GRSModule/: .gitignore  Makefile  README.md  grs_debug_sampler.py  post_sampling_analysis.ipynb  pre_sampling_analysis.ipynb  pyproject.toml  test_grs_debug_sampler.py  viewer.py
GRSModule/configs/: judge_rubric.yaml  models.yaml  run_config.yaml
GRSModule/configs/catalogs/: domains.yaml  render_vars.yaml
GRSModule/pages/: 1_Scenario_Inspector.py  2_Validation_Playground.py  3_Debug_Inference_Viewer.py
GRSModule/scripts/: run_pipeline.py
GRSModule/src/: cli.py
GRSModule/src/infer/: models_config.py
GRSModule/src/judge/: patch.py  prompt_builder.py  runner.py  stats.py
GRSModule/src/leaderboard/: aggregate.py
GRSModule/src/llm/: bedrock.py  factory.py  retry.py
GRSModule/src/render/: load_catalogs.py  models.py  renderer.py
GRSModule/src/validate/: backfill.py  reason_codes.py  semantic.py  validator.py
GRSModule/tests/: test_backfill.py  test_run_pipeline.py
(+4119 files in other folders)
